deleted the margin-left auto as I fixed the footer issue with overflow hidden

--- a/css/style.css
+++ b/css/style.css
@@ -258,10 +258,6 @@ footer {
     margin: 0 auto;
   }
 
-  /* footer.social-media {
-    margin-left: auto;
-  } */
-
   small {
     font-size: 16px;
   }
